[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.poetry]
name = "anyredis"
version = "0.1.0"
description = ""
authors = ["Ian Chen <ianchen7777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
anyio = "^3.6.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = { extras = ["d"], version = "^23.1.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
